# qxlsx-issues-152

./: .gitignore  CMakeLists.txt  README.md
cmake/setup/extern-cpp-modules/: setup-QXlsx.cmake
tests/: CMakeLists.txt  test_main.cpp
